aria label on iframe

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <div class="box">
-                <iframe width="500" height="315" src="https://www.youtube.com/embed/uS86MglTZsI?si=9-dPfPHXfZs9mzhI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="500" height="315" src="https://www.youtube.com/embed/uS86MglTZsI?si=9-dPfPHXfZs9mzhI" title="YouTube video player" aria-label="Video about Jane Austen's life" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
     </section>
