aria label on social media links

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                     <input type="submit" aria-label="subscribe" value="Subscribe" class="btn-scribe">
                 </form>
                 <div class="social-links">
-                    <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/" aria-label="link to facebook page"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/" aria-label="link to instagram page"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             
